[tool.poetry]
name = "cancer-prediction-fmhb2"
version = "0.1.0"
description = "A package to detect cancer"
authors = ["fmbaldo <168650510+fmbaldo@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "matplot lib"
matplot = "lib"
numpy = "^2.1.3"
streamlit = "^1.40.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
